--- a/IncomeManagement.html
+++ b/IncomeManagement.html
@@ -2,9 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Property Income Tracker</title>
+
+    <link rel="stylesheet" href = "IncomeManagement.css">
 </head>
 <body>
+     <h1>LandLord Dashboard</h1>
+
+      <div class="property">
+
+          <h2>Property 1</h2>
+          <p>Address: 19 Elizabeth st 2131</p>
+          <p>Type: Apartment</p>
+          <p>Bedrooms: 2</p>
+          <p>Bathrooms: 1</p>
+          <p>Rent Amount: $2000/month</p>
+          <!--<button onclick="viewProperty">View Details</button>-->
+      </div>
+
+
+     <div class="property">
+         <h2>Property 2</h2>
+         <p>Address: 57 Patterson st 2137</p>
+         <p>Type: House</p>
+         <p>Bedrooms: 3</p>
+         <p>Bathrooms: 2</p>
+         <p>Rent Amount: $4500/month</p>
+<!--<button onclick="viewProperty">View Details</button>-->
+     </div>
+
+
+     <div class="property">
+         <h2>Property 3</h2>
+         <p>Address: 78 Jopling st 2113.</p>
+         <p>Type: House</p>
+         <p>Bedrooms: 1</p>
+         <p>Bathrooms: 1</p>
+         <p>Rent Amount: $1800/month</p>
+<!--<button onclick="viewProperty">View Details</button>-->
+     </div>
+
+
+    <!-- <div class="property">
+         <h2>Property 4</h2>
+         <p>Address: 27 Maxwell st 2074</p>
+         <p>Type: House</p>
+         <p>Bedrooms: 2</p>
+         <p>Bathrooms: 1</p>
+         <p>Rent Amount: $1000/month</p>
+         <button onclick="viewProperty">View Details</button>
+     </div>-->
+
+<!--<div id="property-details" style="display: none;">
+         //<h2>Property Details</h2>
+         <p id="property-info"></p>
+         <button onclick="closePropertyDetails">Close Details</button>
+     </div>-->
+     <div id="total-income">
+         <h2>Total Rental Income</h2>
+         <p>Total: $8300/month</p>
+     </div>
 
 </body>
 </html>
