--- a/Property Maintenance Management.html
+++ b/Property Maintenance Management.html
@@ -13,7 +13,7 @@
 <main>
     <form action="/report/complain" method="post">
         <div class="form-group">
-            <label for="pname">Property ID :</label>
+            <label for="pname">Property Id:</label>
             <input type="text" name="pname" id="pname" required>
         </div>
         <div class="form-group">
