--- a/Property Maintenance Management.html
+++ b/Property Maintenance Management.html
@@ -39,9 +39,13 @@
                 <input type="file" id="myFile" name="filename">
             </form>
         <div class="center">
-        <button type="submit">Submit</button>
-        </div>
+        <button type="submit" ondblclick="myalert()">Submit</button>
     </form>
 </main>
 </body>
 </html>
+<script>
+    function myalert() {
+        alert("Report Submitted");
+    }
+</script>
